--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -32,9 +32,15 @@
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>pharmacymanagement-api</artifactId>
-			<version>1.3.5-SNAPSHOT</version>
+			<version>${pharmacymanagementVersion}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>legacyui-omod</artifactId>
+            <version>${legacyuiVersion}</version>
+            <scope>provided</scope>
+        </dependency>
 
 	</dependencies>
 
