--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 		<module>api</module>
 		<module>omod</module>
 	</modules>
+	
+	<properties>
+		<openMRSVersion>2.3.0</openMRSVersion>
+		<legacyuiVersion>1.6.0</legacyuiVersion>
+		<pharmacymanagementVersion>2.0.0-SNAPSHOT</pharmacymanagementVersion>
+	</properties>
 
 	<dependencyManagement>
 		<dependencies>
@@ -40,10 +46,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-	<properties>
-		<openMRSVersion>1.9.11</openMRSVersion>
-	</properties>
 
 	<build>
 		<pluginManagement>
