--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>mohdataflowmodule</artifactId>
-		<version>0.0.4-SNAPSHOT</version>
+		<version>0.0.5-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>mohdataflowmodule-api</artifactId>
@@ -52,6 +52,12 @@
 		   <version>1.3.5-SNAPSHOT</version>
 		   <scope>provided</scope>
 	   </dependency>
+       <dependency>
+           <groupId>org.openmrs.module</groupId>
+           <artifactId>pharmacymanagement-api</artifactId>
+           <version>1.4.1-SNAPSHOT</version>
+           <scope>compile</scope>
+       </dependency>
 
    </dependencies>
 
